# ai-agents-autogen-template

./: README.md  pyproject.toml
src/ai_agents_autogen_template/: main.py
src/ai_agents_autogen_template/agents/: agents_defintions.py
src/ai_agents_autogen_template/config/: config_definitions.py
src/ai_agents_autogen_template/groupchat/: groupchat_definitons.py
src/ai_agents_autogen_template/llm/: llms_definitions.py
